# EMDU_pc

./: Cargo.toml  serial15packet.ino
src/: button.rs  main.rs
stm32-emdu/: Cargo.toml  Embed.toml  memory.x
stm32-emdu/.cargo/: config.toml
stm32-emdu/src/: Analog.rs  CAN.rs  Digital.rs  homepage.rs  infopage.rs  interrupts.rs  lib.rs  main.rs  systemspage.rs
stm32-emdu/tests/: test-name.rs
